tests/typing/fail/constructor_precond/constructor_precond_fail6.act
contract A

constructor(uint x)
creates
    uint w := x

contract B

constructor(address<A> x, address<A> y)
iff
    x != y
creates
    A a1 := x
    A a2 := y


contract C

constructor()
creates
    A a1 := new A(11)
    A a2 := new A(12)
    B b := new B(new A(11), new A(42))

transition foo()
updates
    b := new B(a1, a2)
